--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,63 +1,74 @@
 ---
-import Layout from '../layouts/BlogPost.astro';
+import AppLayout from "@layouts/AppLayout.astro";
+import Header from "@components/Header.astro";
+import openSourceContributions from "@data/contributions.json";
+import ProjectCard from "@components/ProjectCard.astro";
+
+import technologies from "@data/technologies.json";
+import Skill from "@components/Skill.astro";
 ---
 
-<Layout
-	title="About Me"
-	description="Lorem ipsum dolor sit amet"
-	pubDate={new Date('August 08 2021')}
-	updatedDate={new Date('August 08 2022')}
-	heroImage="/placeholder-about.jpg"
->
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-		labore et dolore magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo
-		viverra. Adipiscing enim eu turpis egestas pretium. Euismod elementum nisi quis eleifend quam
-		adipiscing. In hac habitasse platea dictumst vestibulum. Sagittis purus sit amet volutpat. Netus
-		et malesuada fames ac turpis egestas. Eget magna fermentum iaculis eu non diam phasellus
-		vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst quisque
-		sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
-	</p>
+<AppLayout title="About">
+  <Header title="El Zubeir Huweidi" />
+  <p class="max-w-prose mb-10 font-normal text-zinc-400 leading-relaxed">
+    Welcome to my personal website. I am an open source enthusiast and Software
+    Engineering student at Medtech University. Interested in Backend
+    development, fullstack and DevOps
+  </p>
 
-	<p>
-		Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non
-		tellus. Habitasse platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non
-		blandit massa. Cursus vitae congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-		porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt lobortis. In cursus turpis
-		massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius morbi enim nunc.
-		Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-		bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra
-		massa massa ultricies mi.
-	</p>
+  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
+    <h2
+      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
+      id="section-title"
+    >
+      Education
+    </h2>
+    <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
+      Medtech University
+    </p>
+  </section>
 
-	<p>
-		Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque. Diam sit amet nisl
-		suscipit. Lacus viverra vitae congue eu consequat ac felis donec. Egestas integer eget aliquet
-		nibh praesent tristique magna sit amet. Eget magna fermentum iaculis eu non diam. In vitae
-		turpis massa sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget lorem
-		dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra. Posuere ac ut consequat
-		semper viverra nam. Laoreet suspendisse interdum consectetur libero id faucibus. Diam phasellus
-		vestibulum lorem sed risus ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-		facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed risus pretium quam
-		vulputate. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Fringilla
-		urna porttitor rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
-	</p>
+  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
+    <h2
+      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
+      id="section-title"
+    >
+      Experience
+    </h2>
+    <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
+      3 month internship at UniQ Soft Technology
+    </p>
+  </section>
 
-	<p>
-		Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper
-		viverra. Tellus mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc
-		scelerisque viverra mauris in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-		gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus
-		pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Ut enim
-		blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-		cursus metus aliquam eleifend mi.
-	</p>
+  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
+    <h2
+      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
+      id="section-title"
+    >
+      Interests
+    </h2>
+    <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
+      Interested in every step of putting together an app, espescially
+      constructing the architecture of it and backend development. A big Linux
+      and open source nerd. I love the unique and tailored system experience one
+      can achieve through it
+    </p>
+  </section>
 
-	<p>
-		Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta
-		nibh venenatis cras sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam
-		tempor orci eu lobortis elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci
-		ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar
-		proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
-	</p>
-</Layout>
+  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
+    <h2
+      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
+      id="section-title"
+    >
+      Tech Stack
+    </h2>
+    <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
+      I love exploring a wide variety of languages, tools, libraries and
+      frameworks. Here is a list of technologies I have used and plan to use
+      consistently and or keep in my toolbox
+    </p>
+    <ul class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+      {technologies.map((tech) => <Skill logo={tech.logo} text={tech.text} />)}
+    </ul>
+  </section>
+</AppLayout>
