--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,54 +1,32 @@
 ---
-import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
-import { getCollection } from 'astro:content';
-import FormattedDate from '../../components/FormattedDate.astro';
+import AppLayout from "@layouts/AppLayout.astro";
+import BlogCard from "@components/BlogCard.astro";
+import Header from "@components/Header.astro";
+import { getCollection } from "astro:content";
 
-const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+const posts = (await getCollection("blog")).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
+
+const title = "Blog";
+const description = "My collection of brain farts and thoughts";
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<style>
-			ul {
-				list-style-type: none;
-				padding: unset;
-			}
-			ul li {
-				display: flex;
-			}
-			ul li :global(time) {
-				flex: 0 0 130px;
-				font-style: italic;
-				color: #595959;
-			}
-			ul li a:visited {
-				color: #8e32dc;
-			}
-		</style>
-	</head>
-	<body>
-		<Header />
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<FormattedDate date={post.data.pubDate} />
-								<a href={`/blog/${post.slug}/`}>{post.data.title}</a>
-							</li>
-						))
-					}
-				</ul>
-			</section>
-		</main>
-		<Footer />
-	</body>
-</html>
+<AppLayout title={title} description={description}>
+  <Header title="Blog" />
+  <p class="max-w-prose mb-10 font-normal text-zinc-400 leading-relaxed">
+    {description}
+  </p>
+  <ul class="flex flex-col gap-8 sm:border-l sm:border-zinc-800">
+    {
+      posts.map((post) => (
+        <BlogCard
+          title={post.data.title}
+          pubDate={post.data.pubDate}
+          description={post.data.description}
+          url={`/blog/${post.slug}/`}
+        />
+      ))
+    }
+  </ul>
+</AppLayout>
