--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,37 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import AppLayout from "@layouts/AppLayout.astro";
+import { Picture } from "@astrojs/image/components";
+import authorImage from "@images/zizouhuweidi.jpg";
+import { author } from "@data/socials";
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
-</html>
+<AppLayout>
+  <header class="sm:flex sm:items-center sm:justify-between">
+    <Picture
+      src={authorImage}
+      class="rounded-full overflow-hidden inline-flex"
+      alt="Image of the author"
+      aspectRatio="1:1"
+      widths={[160, 320, 480]}
+      loading="eager"
+      sizes="160px"
+      width={160}
+      height={160}
+    />
+    <div class="mt-8 max-w-lg 2xl:max-w-xl sm:my-0 sm:order-first">
+      <h1 class="mb-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">
+        {author}
+      </h1>
+      <p class="mb-4 text-zinc-300">
+        Software Engineering student and Tech Enthusiast
+      </p>
+      <p
+        class="max-w-prose font-normal text-zinc-400 sm:max-w-sm md:max-w-xl leading-relaxed"
+      >
+        Welcome to my personal website. I am an open source enthusiast and
+        Software Engineering student at Medtech University. Interested in
+        Backend development, fullstack and DevOps
+      </p>
+    </div>
+  </header>
+</AppLayout>
