removed java from tech stack lol

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -36,7 +36,7 @@ import Skill from "@components/Skill.astro";
       Experience
     </h2>
     <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
-      3 month internship at UniQ Soft Technology
+      3 month internship at UniQ Soft Technology (Java Springboot)
     </p>
   </section>
 
@@ -64,8 +64,8 @@ import Skill from "@components/Skill.astro";
     </h2>
     <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
       I love exploring a wide variety of languages, tools, libraries and
-      frameworks. Here is a list of technologies I have used and plan to use
-      consistently and or keep in my toolbox
+      frameworks. Here are technologies I love working with and plan to keep on
+      using and learning
     </p>
     <ul class="grid grid-cols-1 gap-4 sm:grid-cols-2">
       {technologies.map((tech) => <Skill logo={tech.logo} text={tech.text} />)}
