--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,16 +1,10 @@
 ---
 import AppLayout from "@layouts/AppLayout.astro";
 import Header from "@components/Header.astro";
-import technologies from "@data/technologies.json";
-import Skill from "@components/Skill.astro";
 ---
 
 <AppLayout title="About">
-  <Header title="El Zubeir Huweidi" />
-  <p class="max-w-prose mb-10 font-normal text-zinc-400 leading-relaxed">
-    Welcome to my personal website. I am a Software Engineering student and open
-    source enthusiast.
-  </p>
+  <Header title="About" />
 
   <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
     <h2
@@ -58,15 +52,31 @@ import Skill from "@components/Skill.astro";
       class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
       id="section-title"
     >
-      Tech Stack
+      Skills
     </h2>
     <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
-      I love exploring a wide variety of languages, tools, libraries and
-      frameworks. Here are technologies I love working with and plan to keep on
-      using and learning
+      x, y z
     </p>
-    <ul class="grid grid-cols-1 gap-4 sm:grid-cols-2">
-      {technologies.map((tech) => <Skill logo={tech.logo} text={tech.text} />)}
+  </section>
+
+  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
+    <h2
+      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
+      id="section-title"
+    >
+      Links
+    </h2>
+    <ul class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
+      <li>
+        <a class="text-zinc-500" href="https://github.com/zizouhuweidi"
+          >Github</a
+        >
+      </li>
+      <li>
+        <a class="text-blue-400" href="https://twitter.com/zizouhuweidi"
+          >Twitter</a
+        >
+      </li>
     </ul>
   </section>
 </AppLayout>
