--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,9 @@ import AppLayout from "@layouts/AppLayout.astro";
 import { Picture } from "@astrojs/image/components";
 import authorImage from "@images/zizouhuweidi.jpg";
 import { author } from "@data/socials";
+
+import technologies from "@data/technologies.json";
+import Skill from "@components/Skill.astro";
 ---
 
 <AppLayout>
@@ -28,10 +31,27 @@ import { author } from "@data/socials";
       <p
         class="max-w-prose font-normal text-zinc-400 sm:max-w-sm md:max-w-xl leading-relaxed"
       >
-        Welcome to my personal website. I am an open source enthusiast and
-        Software Engineering student at Medtech University. Interested in
-        Backend development, fullstack and DevOps
+        Welcome to my personal website and blog. I am a Software Engineering
+        student and tech enthusiast. Expect to find a documentation of my tech
+        journey and a collection of random thoughts and concepts
       </p>
     </div>
   </header>
+
+  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
+    <h2
+      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
+      id="section-title"
+    >
+      Tech Stack
+    </h2>
+    <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
+      I love exploring a wide variety of languages, tools, libraries and
+      frameworks. Here are technologies I love working with and plan to keep on
+      using and learning
+    </p>
+    <ul class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+      {technologies.map((tech) => <Skill logo={tech.logo} text={tech.text} />)}
+    </ul>
+  </section>
 </AppLayout>
