added social links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import { author } from "@data/socials";
 
 import technologies from "@data/technologies.json";
 import Skill from "@components/Skill.astro";
+import Socials from "@components/Socials.astro";
 ---
 
 <AppLayout>
@@ -37,6 +38,7 @@ import Skill from "@components/Skill.astro";
       </p>
     </div>
   </header>
+  <Socials />
 
   <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
     <h2
