--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,9 @@
 ---
 import AppLayout from "@layouts/AppLayout.astro";
 import Header from "@components/Header.astro";
+
+import technologies from "@data/technologies.json";
+import Skill from "@components/Skill.astro";
 ---
 
 <AppLayout title="About">
@@ -11,26 +14,11 @@ import Header from "@components/Header.astro";
       class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
       id="section-title"
     >
-      Education
+      Background
     </h2>
     <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
-      Medtech University (2019-2024)
+      x, y z
     </p>
-  </section>
-
-  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
-    <h2
-      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
-      id="section-title"
-    >
-      Experience
-    </h2>
-    <ul class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
-      <li class="">
-        3 month internship at UniQ Soft Technology (Java Springboot)
-      </li>
-      <li>Making a club management app for Rotary Club (Express, React)</li>
-    </ul>
   </section>
 
   <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
@@ -43,40 +31,24 @@ import Header from "@components/Header.astro";
     <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
       I love the whole process and evolution of building applications and tools,
       in particular those that are of use to me and others. Also a big Linux and
-      open source nerd.
+      open source nerd. Football (AC Milan) and UFC fan.
     </p>
   </section>
 
-  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
-    <h2
-      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
-      id="section-title"
-    >
-      Skills
-    </h2>
-    <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
-      x, y z
-    </p>
-  </section>
-
-  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
-    <h2
-      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
-      id="section-title"
-    >
-      Links
-    </h2>
-    <ul class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
-      <li>
-        <a class="text-zinc-500" href="https://github.com/zizouhuweidi"
-          >Github</a
-        >
-      </li>
-      <li>
-        <a class="text-blue-400" href="https://twitter.com/zizouhuweidi"
-          >Twitter</a
-        >
-      </li>
-    </ul>
-  </section>
+  <!-- <section class="mt-10 sm:mt-14" aria-labelledby="section-title"> -->
+  <!--   <h2 -->
+  <!--     class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight" -->
+  <!--     id="section-title" -->
+  <!--   > -->
+  <!--     Tech Stack -->
+  <!--   </h2> -->
+  <!--   <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed"> -->
+  <!--     I love exploring a wide variety of languages, tools, libraries and -->
+  <!--     frameworks. Here are technologies I love working with and plan to keep on -->
+  <!--     using and learning -->
+  <!--   </p> -->
+  <!--   <ul class="grid grid-cols-1 gap-4 sm:grid-cols-2"> -->
+  <!--     {technologies.map((tech) => <Skill logo={tech.logo} text={tech.text} />)} -->
+  <!--   </ul> -->
+  <!-- </section> -->
 </AppLayout>
