--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -27,13 +27,13 @@ import SocialIcon from "../components/SocialIcon.astro";
   <!--     url="zubeir.huweidi@gmail.com" -->
   <!--   /> -->
   <!-- </div> -->
-  <div class="mr-4">
-    <SocialIcon
-      icon="fa-brands:linkedin"
-      label="linkedin"
-      url="https://www.linkedin.com/in/el-zubeir-huweidi-900899234/"
-    />
-  </div>
+  <!-- <div class="mr-4"> -->
+  <!--   <SocialIcon -->
+  <!--     icon="fa-brands:linkedin" -->
+  <!--     label="linkedin" -->
+  <!--     url="https://www.linkedin.com/in/el-zubeir-huweidi-900899234/" -->
+  <!--   /> -->
+  <!-- </div> -->
   <!-- <div> -->
   <!--   <SocialIcon -->
   <!--     icon="ic:baseline-list-alt" -->
