--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -35,20 +35,20 @@ import Skill from "@components/Skill.astro";
     </p>
   </section>
 
-  <!-- <section class="mt-10 sm:mt-14" aria-labelledby="section-title"> -->
-  <!--   <h2 -->
-  <!--     class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight" -->
-  <!--     id="section-title" -->
-  <!--   > -->
-  <!--     Tech Stack -->
-  <!--   </h2> -->
-  <!--   <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed"> -->
-  <!--     I love exploring a wide variety of languages, tools, libraries and -->
-  <!--     frameworks. Here are technologies I love working with and plan to keep on -->
-  <!--     using and learning -->
-  <!--   </p> -->
-  <!--   <ul class="grid grid-cols-1 gap-4 sm:grid-cols-2"> -->
-  <!--     {technologies.map((tech) => <Skill logo={tech.logo} text={tech.text} />)} -->
-  <!--   </ul> -->
-  <!-- </section> -->
+  <section class="mt-10 sm:mt-14" aria-labelledby="section-title">
+    <h2
+      class="text-zinc-300 mb-4 text-2xl font-bold tracking-tight"
+      id="section-title"
+    >
+      Tech
+    </h2>
+    <p class="max-w-prose mb-8 font-normal text-zinc-400 leading-relaxed">
+      I love exploring a wide variety of languages, tools, libraries and
+      frameworks. Here are some technologies that I am learning to use or
+      learning for fun (Rust and Ocaml)
+    </p>
+    <ul class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+      {technologies.map((tech) => <Skill logo={tech.logo} text={tech.text} />)}
+    </ul>
+  </section>
 </AppLayout>
