--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -9,7 +9,7 @@ const posts = (await getCollection("blog")).sort(
 );
 
 const title = "Blog";
-const description = "My collection of thoughts and brain farts";
+const description = "My collection of thoughts and blaberings";
 ---
 
 <AppLayout title={title} description={description}>
