--- a/src/components/Skill.astro
+++ b/src/components/Skill.astro
@@ -2,17 +2,17 @@
 import { Icon } from "astro-icon";
 
 interface Props {
-  text: string;
-  logo: string;
+	text: string;
+	logo: string;
 }
 
 const { text, logo } = Astro.props;
 ---
 
 <li class="flex items-center gap-4">
-  <span
-    class="w-11 h-11 flex items-center justify-center border-t border-zinc-700 bg-zinc-800 rounded-full"
-    ><Icon name={logo} class="w-6" />
-  </span>
-  <span class="text-zinc-400">{text}</span>
+	<span
+		class="flex h-11 w-11 items-center justify-center rounded-full border-t border-zinc-700 bg-zinc-800"
+		><Icon name={logo} class="w-6" />
+	</span>
+	<span class="text-zinc-400">{text}</span>
 </li>
