--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,39 +1,35 @@
 ---
-import AppLayout from "@layouts/AppLayout.astro";
-import { Picture } from "@astrojs/image/components";
-import authorImage from "@images/zizouhuweidi.jpg";
-import { author } from "@data/socials";
-import Socials from "@components/Socials.astro";
+import { getCollection } from "astro:content";
+import PageLayout from "@/layouts/Base";
+import PostPreview from "@/components/blog/PostPreview";
+import SocialList from "@/components/SocialList";
+import { sortMDByDate } from "@/utils";
+
+const MAX_POSTS = 10;
+const allPosts = await getCollection("post");
+const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 ---
 
-<AppLayout>
-  <header class="sm:flex sm:items-center sm:justify-between">
-    <Picture
-      src={authorImage}
-      class="rounded-full overflow-hidden inline-flex"
-      alt="Image of the author"
-      aspectRatio="1:1"
-      widths={[160, 320, 480]}
-      loading="eager"
-      sizes="160px"
-      width={160}
-      height={160}
-    />
-    <div class="mt-8 max-w-lg 2xl:max-w-xl sm:my-0 sm:order-first">
-      <h1 class="mb-2 text-3xl font-bold tracking-tight text-white sm:text-4xl">
-        {author}
-      </h1>
-      <p class="mb-4 text-zinc-300">
-        Software Engineering student and Tech Enthusiast
-      </p>
-      <p
-        class="max-w-prose font-normal text-zinc-400 sm:max-w-sm md:max-w-xl leading-relaxed"
-      >
-        Welcome to my personal website and blog. I am a Software Engineering
-        student and tech enthusiast. Expect to find a documentation of my tech
-        journey and a collection of random thoughts and concepts
-      </p>
-    </div>
-  </header>
-  <Socials />
-</AppLayout>
+<PageLayout meta={{ title: "Home" }}>
+	<section>
+		<h1 class="title mb-6">Hello World!</h1>
+		<p class="mb-4">
+			Welcome to my personal website and blog. I am a Software Engineering student and tech
+			enthusiast. Expect to find a documentation of my tech journey and a collection of random
+			thoughts and concepts
+		</p>
+		<SocialList />
+	</section>
+	<section aria-label="Blog post list" class="mt-16">
+		<h2 class="title mb-4 text-xl">Posts</h2>
+		<ul class="space-y-4 sm:space-y-2">
+			{
+				allPostsByDate.map((p) => (
+					<li class="flex flex-col gap-x-2 sm:flex-row">
+						<PostPreview post={p} />
+					</li>
+				))
+			}
+		</ul>
+	</section>
+</PageLayout>
