--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,44 +1,48 @@
 ---
-import AppLayout from "@layouts/AppLayout.astro";
-import Header from "@components/Header.astro";
-import openSourceContributions from "@data/contributions.json";
-import ProjectCard from "@components/ProjectCard.astro";
+import PageLayout from "@/layouts/Base";
+
+import openSourceContributions from "../data/contributions.json";
+import ProjectCard from "../components/ProjectCard.astro";
 
 let contributions = openSourceContributions.sort((a, b) => {
-  if (a.role === "maintainer" && b.role !== "maintainer") {
-    return -1;
-  }
-  if (a.role === "maintainer" && b.role === "maintainer") {
-    return a.stars > b.stars ? -1 : 1;
-  }
-  if (a.role === "author" && b.role === "author") {
-    return a.stars > b.stars ? -1 : 1;
-  }
-  if (a.role === "author" && b.role !== "author") {
-    return -1;
-  }
-  return 0;
+	if (a.role === "maintainer" && b.role !== "maintainer") {
+		return -1;
+	}
+	if (a.role === "maintainer" && b.role === "maintainer") {
+		return a.stars > b.stars ? -1 : 1;
+	}
+	if (a.role === "author" && b.role === "author") {
+		return a.stars > b.stars ? -1 : 1;
+	}
+	if (a.role === "author" && b.role !== "author") {
+		return -1;
+	}
+	return 0;
 });
+
+const meta = {
+	title: "About",
+	description: "I'm a starter theme for Astro.build",
+};
 ---
 
-<AppLayout title="Projects">
-  <Header title="My Projects" />
-  <p class="max-w-prose mb-10 font-normal text-zinc-400 leading-relaxed">
-    A concise list of some relevant projects I have authored, contributed to and
-    or maintain
-  </p>
-  <ul class="grid grid-cols-1 gap-8">
-    {
-      contributions.map((project) => (
-        <ProjectCard
-          name={project.name}
-          description={project.description}
-          stars={project.stars}
-          role={project.role}
-          url={project.url}
-          languages={project.languages}
-        />
-      ))
-    }
-  </ul>
-</AppLayout>
+<PageLayout meta={meta}>
+	<h1 class="title mb-6">My Projects</h1>
+	<p class="mb-10 max-w-prose font-normal leading-relaxed text-zinc-400">
+		A concise list of some relevant projects I have authored, contributed to and or maintain
+	</p>
+	<ul class="grid grid-cols-1 gap-8">
+		{
+			contributions.map((project) => (
+				<ProjectCard
+					name={project.name}
+					description={project.description}
+					stars={project.stars}
+					role={project.role}
+					url={project.url}
+					languages={project.languages}
+				/>
+			))
+		}
+	</ul>
+</PageLayout>
