no more lightmode lol

--- a/src/components/blog/Hero.astro
+++ b/src/components/blog/Hero.astro
@@ -37,10 +37,12 @@ const postDate = getFormattedDate(content.data.publishDate, { month: "long" });
 			{content.data.tags.map((tag, i) => (
 				<>
 					<a
-						class="cactus-link inline-block before:content-['#']"
+						class="zizou-link inline-block before:content-['#']"
 						aria-label={`View more blogs with the tag ${tag}`}
 						href={`/tags/${tag}`}
-					>{tag}</a>
+					>
+						{tag}
+					</a>
 					{i < content.data.tags.length - 1 && ", "}
 				</>
 			))}
