--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -63,7 +63,7 @@ import authorImage from "../../assets/zizouhuweidi.jpg";
 			}
 		</nav>
 	</div>
-	<ThemeToggle />
+	<!-- <ThemeToggle /> -->
 	<button
 		id="toggle-navigation-menu"
 		class="group relative ml-8 h-7 w-7 sm:invisible sm:hidden"
