--- a/src/components/blog/PostPreview.astro
+++ b/src/components/blog/PostPreview.astro
@@ -16,8 +16,8 @@ const postDate = getFormattedDate(date);
 
 <time datetime={datetime} class="min-w-[120px] text-gray-500">{postDate}</time>
 <Element>
-	<a href={`/posts/${post.slug}`} class="cactus-link" rel="prefetch">
+	<a href={`/posts/${post.slug}`} class="zizou-link" rel="prefetch">
 		{post.data.title}
 	</a>
 </Element>
-{withDesc && <q class="line-clamp-3 mt-2 block italic">{post.data.description}</q>}
+{withDesc && <q class="mt-2 block italic line-clamp-3">{post.data.description}</q>}
