--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -19,7 +19,7 @@ const meta = {
 			Object.entries(allTags).map(([tag, val]) => (
 				<li class="flex items-center gap-x-2">
 					<a
-						class="cactus-link inline-block"
+						class="zizou-link inline-block"
 						href={`/tags/${tag}`}
 						title={`View posts with the tag: ${tag}`}
 						rel="prefetch"
