forced dark mode properly

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -48,7 +48,7 @@ const {
 			observer.observe(root, { attributeFilter: ["class"] });
 
 			// initailse root class attribute
-			root.classList.toggle("dark", isDark);
+			root.classList.toggle("dark" /*, isDark*/);
 		</script>
 	</head>
 	<body>
