--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,7 +33,7 @@ const meta = {
 		<h2 class="mb-4 text-2xl font-bold tracking-tight text-zinc-300" id="section-title">Tech</h2>
 		<p class="mb-8 max-w-prose font-normal leading-relaxed text-zinc-400">
 			I love exploring a wide variety of languages, tools, libraries and frameworks. Here are some
-			technologies that I am learning to use or learning for fun (Rust and Ocaml)
+			technologies that I am actively learning and keep in my toolset
 		</p>
 		<ul class="grid grid-cols-1 gap-4 sm:grid-cols-2">
 			{technologies.map((tech) => <Skill logo={tech.logo} text={tech.text} />)}
