--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,13 @@ const meta = {
 		<h2 class="mb-4 text-2xl font-bold tracking-tight text-zinc-300" id="section-title">
 			Background
 		</h2>
-		<p class="mb-8 max-w-prose font-normal leading-relaxed text-zinc-400">x, y z</p>
+		<p class="mb-8 max-w-prose font-normal leading-relaxed text-zinc-400">
+			I am a software engineering student at SMU Medtech. Libya born and raised, currently residing in Tunis.
+			A proud Muslim, Alhamdulillah. 
+		<p class="mb-8 max-w-prose font-normal leading-relaxed text-zinc-400">
+			The goal is to be a key to goodness and leave behind a legacy of goodness and beneficial knowledge.
+		</p>
+		</p>
 	</section>
 
 	<section class="mt-10 sm:mt-14" aria-labelledby="section-title">
