--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,21 +4,21 @@ import PageLayout from "@/layouts/Base";
 import openSourceContributions from "../data/contributions.json";
 import ProjectCard from "../components/ProjectCard.astro";
 
-let contributions = openSourceContributions.sort((a, b) => {
-	if (a.role === "maintainer" && b.role !== "maintainer") {
-		return -1;
-	}
-	if (a.role === "maintainer" && b.role === "maintainer") {
-		return a.stars > b.stars ? -1 : 1;
-	}
-	if (a.role === "author" && b.role === "author") {
-		return a.stars > b.stars ? -1 : 1;
-	}
-	if (a.role === "author" && b.role !== "author") {
-		return -1;
-	}
-	return 0;
-});
+let contributions = openSourceContributions// .sort((a, b) => {
+// 	if (a.role === "maintainer" && b.role !== "maintainer") {
+// 		return -1;
+// 	}
+// 	if (a.role === "maintainer" && b.role === "maintainer") {
+// 		return a.stars > b.stars ? -1 : 1;
+// 	}
+// 	if (a.role === "author" && b.role === "author") {
+// 		return a.stars > b.stars ? -1 : 1;
+// 	}
+// 	if (a.role === "author" && b.role !== "author") {
+// 		return -1;
+// 	}
+// 	return 0;
+// });
 
 const meta = {
 	title: "About",
