--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,10 +16,9 @@ const meta = {
 			Background
 		</h2>
 		<p class="mb-8 max-w-prose font-normal leading-relaxed text-zinc-400">
-			I am a software engineering student at SMU Medtech. Libya born and raised, currently residing in Tunis.
-			A proud Muslim, Alhamdulillah. 
+			A proud Muslim and software engineering student at SMU Medtech. Libya born and raised, currently residing in Tunis.
 		<p class="mb-8 max-w-prose font-normal leading-relaxed text-zinc-400">
-			The goal is to be a key to goodness and leave behind a legacy of goodness and beneficial knowledge.
+			The goal is to be a key to goodness and leave behind a legacy of beneficial knowledge.
 		</p>
 		</p>
 	</section>
