--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -4,8 +4,8 @@ import { MENU_LINKS } from "@/data/constants";
 
 const url = new URL(Astro.request.url);
 
-import { Picture } from "@astrojs/image/components";
 import authorImage from "../../assets/zizouhuweidi.jpg";
+import { Image } from "astro:assets";
 ---
 
 <script>
@@ -31,11 +31,10 @@ import authorImage from "../../assets/zizouhuweidi.jpg";
 			class="inline-flex items-center hover:filter-none sm:relative sm:inline-block"
 			aria-current={url.pathname === "/" ? "page" : false}
 		>
-			<Picture
+			<Image
 				src={authorImage}
-				class="mr-3 h-16 w-16 rounded-full sm:absolute sm:top-1 sm:left-[-5rem] sm:mr-0 sm:h-16 sm:w-16"
+				class="mr-3 h-16 w-16 rounded-full sm:absolute sm:left-[-5rem] sm:top-1 sm:mr-0 sm:h-16 sm:w-16"
 				alt="Image of the author"
-				aspectRatio="1:1"
 				widths={[160, 320, 480]}
 				loading="eager"
 				sizes="160px"
@@ -46,14 +45,14 @@ import authorImage from "../../assets/zizouhuweidi.jpg";
 		</a>
 		<nav
 			id="navigation-menu"
-			class="absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md bg-[color:var(--theme-menu-bg)] py-4 text-accent shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:mt-1 sm:-ml-4 sm:flex sm:flex-row sm:items-center sm:divide-x sm:divide-dashed sm:divide-accent sm:rounded-none sm:bg-transparent sm:py-0 sm:shadow-none sm:backdrop-blur-none"
+			class="absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md bg-[color:var(--theme-menu-bg)] py-4 text-accent shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:-ml-4 sm:mt-1 sm:flex sm:flex-row sm:items-center sm:divide-x sm:divide-dashed sm:divide-accent sm:rounded-none sm:bg-transparent sm:py-0 sm:shadow-none sm:backdrop-blur-none"
 			aria-label="Main menu"
 		>
 			{
 				MENU_LINKS.map((link) => (
 					<a
 						href={link.path}
-						class="py-4 px-4 sm:py-0 sm:hover:underline"
+						class="px-4 py-4 sm:py-0 sm:hover:underline"
 						aria-current={url.pathname === link.path ? "page" : false}
 						rel="prefetch"
 					>
@@ -74,7 +73,7 @@ import authorImage from "../../assets/zizouhuweidi.jpg";
 	>
 		<svg
 			id="line-svg"
-			class="absolute top-1/2 left-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 transition-all group-aria-expanded:scale-0 group-aria-expanded:opacity-0"
+			class="absolute left-1/2 top-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 transition-all group-aria-expanded:scale-0 group-aria-expanded:opacity-0"
 			aria-hidden="true"
 			focusable="false"
 			xmlns="http://www.w3.org/2000/svg"
@@ -87,7 +86,7 @@ import authorImage from "../../assets/zizouhuweidi.jpg";
 		</svg>
 		<svg
 			id="cross-svg"
-			class="absolute top-1/2 left-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 scale-0 text-accent opacity-0 transition-all group-aria-expanded:scale-100 group-aria-expanded:opacity-100"
+			class="absolute left-1/2 top-1/2 h-full w-full -translate-x-1/2 -translate-y-1/2 scale-0 text-accent opacity-0 transition-all group-aria-expanded:scale-100 group-aria-expanded:opacity-100"
 			class="text-accent"
 			aria-hidden="true"
 			focusable="false"
