--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="title mb-6">Hello World!</h1>
+		<h1 class="title mb-6">hello, world!</h1>
 		<p class="mb-4">
 			Welcome to my personal website and blog. I am a Software Engineering student and tech
 			enthusiast. Expect to find a documentation of my tech journey and a collection of random
