--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ const meta = {
 			Background
 		</h2>
 		<p class="mb-8 max-w-prose font-normal leading-relaxed text-zinc-400">
-			A proud Muslim and software engineering student at SMU Medtech. Libya born and raised, currently residing in Tunis.
+			Software engineering student at SMU Medtech. Libya born and raised, currently residing in Tunis.
 		<p class="mb-8 max-w-prose font-normal leading-relaxed text-zinc-400">
 			The goal is to be a key to goodness and leave behind a legacy of beneficial knowledge.
 		</p>
@@ -29,8 +29,7 @@ const meta = {
 		</h2>
 		<p class="mb-8 max-w-prose font-normal leading-relaxed text-zinc-400">
 			I love the whole process and evolution of building applications and tools, in particular those
-			that are of use to me and others. Also a big Linux and open source nerd. Football (AC Milan)
-			and UFC fan.
+			that are of use to me and others. Linux and open source nerd. Football and MMA fan
 		</p>
 	</section>
 
