--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,14 +22,14 @@ const allPostsByDate = allPosts
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="title mb-6">Hello World!</h1>
+		<h1 class="title mb-6">hello, world!</h1>
 		<p class="mb-4">
-Welcome to my humble abode on the interwebs, a log of my thoughts and a documentation of my journey.
+			welcome to my humble abode on the interwebs, a log of my thoughts and a documentation of my journey
 		</p>
 		<SocialList />
 	</section>
 	<section class="mt-16">
-		<h2 class="title text-accent mb-6 text-xl"><a href="/posts/">Posts</a></h2>
+		<h2 class="title text-accent mb-6 text-xl"><a href="/posts/">posts</a></h2>
 		<ul class="space-y-6" role="list">
 			{
 				allPostsByDate.map((p) => (
