--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,11 +17,8 @@ const meta = {
       <li>Backend Engineer interested in System Design, FOSS and AI</li>
     </ul>
 
-    <h2 class="mb-4">Repositories</h2>
+    <h2 class="mb-4">projects</h2>
     <ul class="list-disc list-inside mb-8">
-      <li>
-        <strong><a href="http://github.com/zizouhuweidi/advent-of-code">advent-of-code</a></strong>: My attempts at solving Advent of Code puzzles.
-      </li>
       <li>
         <strong><a href="http://github.com/zizouhuweidi/bayt-alhikmah">bayt-alhikmah</a></strong> A knowledge center.
       </li>
@@ -36,7 +33,7 @@ const meta = {
       </li>
     </ul>
 
-    <h2 class="mb-4">Skills and Technologies</h2>
+    <h2 class="mb-4">skills</h2>
     <ul class="list-disc list-inside">
       <li><strong>Programming Languages:</strong> Go, Python, TypeScript</li>
       <li><strong>Tools:</strong> Postgres, MySQL, Git, Docker</li>
