--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,12 +10,10 @@ const meta = {
 <PageLayout meta={meta}>
   <div class="prose prose-cactus max-w-none mb-8">
     <h2 class="mb-4">whoami</h2>
-    <ul class="list-disc list-inside mb-8">
-      <li>Muslim, Libyan, and a Software Engineer</li>
-      <li>Simple man who strives to simplify the complicated without sacrificing correctness</li>
-      <li>Goal in life is to be a key to goodness and leave behind a legacy of goodness</li>
-      <li>Backend Engineer interested in System Design, FOSS and AI</li>
-    </ul>
+    <p>Muslim, Libyan, and a Software Engineer</p>
+    <p>Backend Engineer interested in System Design, FOSS and AI</p>
+    <p>Simple man who strives to simplify the complicated without sacrificing correctness</p>
+    <p>Goal in life is to be a key to goodness and leave behind a legacy of goodness</p>
 
     <h2 class="mb-4">projects</h2>
     <ul class="list-disc list-inside mb-8">
