--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -2,7 +2,6 @@
 import Search from "@/components/Search.astro";
 // import ThemeToggle from "@/components/ThemeToggle.astro";
 import { menuLinks } from "@/site.config";
-import {siteConfig} from "../../site.config";
 ---
 
 <header class="group relative mb-28 flex items-center" id="main-header">
@@ -12,7 +11,9 @@ import {siteConfig} from "../../site.config";
 			class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
 			href="/"
 		>
-			<span class="text-xl font-bold sm:text-2xl">{siteConfig.title}</span>
+			<span class="text-xl font-bold sm:text-2xl"
+				>~{Astro.url.pathname !== "/" ? Astro.url.pathname.replace(/\/$/, "") : ""}</span
+			>
 		</a>
 		<nav
 			aria-label="Main menu"
