--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -12,7 +12,7 @@ import { menuLinks } from "@/site.config";
 			href="/"
 		>
 			<span class="text-xl font-bold sm:text-2xl"
-				>~{Astro.url.pathname !== "/" ? Astro.url.pathname.replace(/\/$/, "") : ""}</span
+				>~{Astro.url.pathname !== "/" ? "/" + Astro.url.pathname.split("/")[1] : ""}</span
 			>
 		</a>
 		<nav
