--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -16,25 +16,26 @@ const meta = {
     <p>Goal in life is to be a key to goodness and leave behind a legacy of goodness</p>
 
     <h2 class="mb-4">projects</h2>
+
     <ul class="list-disc list-inside mb-8">
       <li>
-        <strong><a href="http://github.com/zizouhuweidi/bayt-alhikmah">bayt-alhikmah</a></strong> A knowledge center.
+        <strong><a href="http://github.com/zizouhuweidi/bayt-alhikmah">bayt-alhikmah</a></strong> knowledge center
       </li>
       <li>
-        <strong><a href="http://github.com/zizouhuweidi/jester">jester</a></strong> A CLI tool that tells you shit jokes.
+        <strong><a href="http://github.com/zizouhuweidi/dahaa-backend">dahaa</a></strong> quiz game where you bullshit your friends
       </li>
       <li>
-        <strong><a href="http://github.com/zizouhuweidi/monke">monke</a></strong> The monke programming language.
+        <strong><a href="http://github.com/zizouhuweidi/jester">jester</a></strong> cli that tells shit jokes
       </li>
       <li>
-        <strong><a href="http://github.com/zizouhuweidi/slander-detection">slander-detection</a></strong> An insult detection model.
+        <strong><a href="http://github.com/zizouhuweidi/slander-detection">slander-detection</a></strong> slander detection model
       </li>
     </ul>
 
     <h2 class="mb-4">skills</h2>
     <ul class="list-disc list-inside">
-      <li><strong>Programming Languages:</strong> Go, Python, TypeScript</li>
-      <li><strong>Tools:</strong> Postgres, MySQL, Git, Docker</li>
+      <li><strong>Programming Languages:</strong> Go, Python, C#, TypeScript</li>
+      <li><strong>Tools:</strong> Postgres, MySQL, Redis, Git, Linux, Docker</li>
     </ul>
   </div>
 </PageLayout>
