--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -34,8 +34,8 @@ const meta = {
 
     <h2 class="mb-4">skills</h2>
     <ul class="list-disc list-inside">
-      <li><strong>Programming Languages:</strong> Go, Python, C#, TypeScript</li>
-      <li><strong>Tools:</strong> Postgres, MySQL, Redis, Git, Linux, Docker</li>
+      <li><strong>Programming Languages:</strong> Go, Python, C#, TypeScript, C++</li>
+      <li><strong>Tools:</strong> Postgres, MySQL, Redis, Kafka, Git, Linux, Docker</li>
     </ul>
   </div>
 </PageLayout>
