--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -39,7 +39,7 @@ const meta = {
 
 		<h2 class="mb-4">skills</h2>
 		<ul class="list-inside list-disc">
-			<li><strong>Programming Languages:</strong> Go, Python, C#, TypeScript, C++</li>
+			<li><strong>Programming Languages:</strong> Go, Python, C#, TypeScript</li>
 			<li><strong>Tools:</strong> Postgres, MySQL, Redis, RabbitMQ, Docker, Git</li>
 		</ul>
 	</div>
