--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -11,7 +11,7 @@ const meta = {
 	<div class="prose prose-cactus mb-8 max-w-none">
 		<h2 class="mb-4">whoami</h2>
 		<p>Muslim, Libyan, and a Software Engineer</p>
-		<p>Backend Engineer interested in System Design and FOSS</p>
+    <p>Backend Engineer interested in System Design, Data Engineering and FOSS</p>
 		<p>Simple man who strives to simplify the complicated without sacrificing correctness</p>
 		<p>Goal in life is to be a key to goodness and leave behind a legacy of goodness</p>
 
@@ -39,8 +39,8 @@ const meta = {
 
 		<h2 class="mb-4">skills</h2>
 		<ul class="list-inside list-disc">
-			<li><strong>Programming Languages:</strong> Go, Python, C#, TypeScript</li>
-			<li><strong>Tools:</strong> Postgres, MySQL, Redis, RabbitMQ, Docker, Git</li>
+			<li><strong>Programming Languages:</strong> Go, Python, TyepeScript, C#</li>
+      <li><strong>Tools:</strong> Postgres, MySQL, Redis, RabbitMQ, Kafka, Docker, Git</li>
 		</ul>
 	</div>
 </PageLayout>
