--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -11,7 +11,7 @@ const meta = {
 	<div class="prose prose-cactus mb-8 max-w-none">
 		<h2 class="mb-4">whoami</h2>
 		<p>Muslim, Libyan, and a Software Engineer</p>
-    <p>Backend Engineer interested in System Design, Data Engineering and FOSS</p>
+    <p>Backend Engineer interested in System Design and FOSS</p>
 		<p>Simple man who strives to simplify the complicated without sacrificing correctness</p>
 		<p>Goal in life is to be a key to goodness and leave behind a legacy of goodness</p>
 
@@ -23,7 +23,7 @@ const meta = {
 				center
 			</li>
 			<li>
-				<strong><a href="http://github.com/zizouhuweidi/dahaa-backend">dahaa</a></strong> quiz game where
+				<strong><a href="http://github.com/zizouhuweidi/dahaa">dahaa</a></strong> quiz game where
 				you bullshit your friends
 			</li>
 			<li>
