--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -23,12 +23,11 @@ const meta = {
 				center
 			</li>
 			<li>
+				<strong><a href="http://github.com/zizouhuweidi/adhanctl">adhanctl</a></strong> minimal islamic prayer time cli and daemon with notifications and waybar support
+      </li>
+			<li>
 				<strong><a href="http://github.com/zizouhuweidi/dahaa">dahaa</a></strong> quiz game where
 				you bullshit your friends
-			</li>
-			<li>
-				<strong><a href="http://github.com/zizouhuweidi/jester">jester</a></strong> cli that tells shit
-				jokes
 			</li>
 			<li>
 				<strong
