--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -23,7 +23,7 @@ const meta = {
 				center
 			</li>
 			<li>
-				<strong><a href="http://github.com/zizouhuweidi/adhanctl">adhanctl</a></strong> minimal islamic prayer time cli and daemon with notifications and waybar support
+				<strong><a href="http://github.com/zizouhuweidi/adhanctl">adhanctl</a></strong> minimal islamic prayer time cli and daemon
       </li>
 			<li>
 				<strong><a href="http://github.com/zizouhuweidi/dahaa">dahaa</a></strong> quiz game where
