--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -23,6 +23,9 @@ const meta = {
 				center
 			</li>
 			<li>
+				<strong><a href="http://github.com/zizouhuweidi/athar">bayt-alhikmah</a></strong> cross-platform gui and cli for dhikr
+			</li>
+			<li>
 				<strong><a href="http://github.com/zizouhuweidi/adhanctl">adhanctl</a></strong> minimal islamic prayer time cli and daemon
       </li>
 			<li>
@@ -38,8 +41,8 @@ const meta = {
 
 		<h2 class="mb-4">skills</h2>
 		<ul class="list-inside list-disc">
-			<li><strong>Programming Languages:</strong> Go, Python, TyepeScript, C#</li>
-      <li><strong>Tools:</strong> Postgres, MySQL, Redis, RabbitMQ, Kafka, Docker, Git</li>
+      <li><strong>Programming Languages:</strong> Go, Python, TyepeScript, Rust</li>
+      <li><strong>Tools:</strong> Postgres, MySQL, Sqlite, Redis, RabbitMQ, Kafka, Docker, Git</li>
 		</ul>
 	</div>
 </PageLayout>
