--- a/src/pages/whoami.astro
+++ b/src/pages/whoami.astro
@@ -23,7 +23,7 @@ const meta = {
 				center
 			</li>
 			<li>
-				<strong><a href="http://github.com/zizouhuweidi/athar">bayt-alhikmah</a></strong> cross-platform gui and cli for dhikr
+				<strong><a href="http://github.com/zizouhuweidi/adhkar">dhikr</a></strong> cross-platform gui and cli for adhkar
 			</li>
 			<li>
 				<strong><a href="http://github.com/zizouhuweidi/adhanctl">adhanctl</a></strong> minimal islamic prayer time cli and daemon
